final submitted version

--- a/paper-gd/hexagraph.bib
+++ b/paper-gd/hexagraph.bib
@@ -1,3 +1,40 @@
+@incollection{thomassen,
+author = {Thomassen, C.},
+title = {Plane representations of graphs},
+editor = {Bondy, JA and Murty, USR},
+booktitle = {Progress in Graph Theory},
+pages = {43--69},
+publisher = {Academic Press, Canada},
+year = 1984
+}
+
+@inproceedings{touching,
+  title={On touching triangle graphs},
+  author={Gansner, Emden R and Hu, Yifan and Kobourov, Stephen G},
+  booktitle={Graph Drawing},
+  pages={250--261},
+  year={2011},
+  publisher={Springer}
+}
+
+@techreport{hexagrid,
+  title = {Hexagonal Grid Drawings},
+  author = {Goos Kant},
+  institution = {Department of Computer Science, Utrecht University},
+  address = {Padualaan 14, PO Box 80.089, 3508 TB Utrecht, The Netherlands},
+  year = 1992,
+  number = {RUU-CS-92-06}
+}
+
+@article{em,
+title = {Simple and globally convergent methods for acceslerating the convergence of any {EM} algorithm},
+author = {Ravi Varadhan and Christophe Roland},
+journal = {Scandinavian Journal of Statistics},
+volume = 35,
+pages = {335--353},
+year = 2008
+}
+
 @article{spin,
 author = {Tsafrir, D. and Tsafrir, I. and Ein-Dor, L. and Zuk, O. and Notterman, D.A. and Domany, E.}, 
 title = {Sorting points into neighborhoods {(SPIN)}: data analysis and visualization by ordering distance matrices},
